--- a/package.json
+++ b/package.json
@@ -1,111 +1,31 @@
 {
-  "name": "hardhat-project-template-ts",
+  "name": "zksync-vyper-sandbox",
   "version": "1.0.0",
-  "description": "A fully-fledged Hardhat project template based on TypeScript.",
+  "description": "A sandbox environment for zkSync Era Vyper compiler testing.",
   "keywords": [
-    "template",
-    "typescript",
-    "ethereum",
-    "smart-contracts",
-    "solidity",
-    "foundry",
-    "hardhat"
+    "compiler",
+    "testing",
+    "vyper",
+    "zksync-era"
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/pcaversaccio/hardhat-project-template-ts.git"
+    "url": "git+https://github.com/pcaversaccio/zksync-vyper-sandbox.git"
   },
-  "homepage": "https://github.com/pcaversaccio/hardhat-project-template-ts#readme",
+  "homepage": "https://github.com/pcaversaccio/zksync-vyper-sandbox#readme",
   "bugs": {
-    "url": "https://github.com/pcaversaccio/hardhat-project-template-ts/issues"
+    "url": "https://github.com/pcaversaccio/zksync-vyper-sandbox/issues"
   },
   "author": "Pascal Marco Caversaccio <pascal.caversaccio@hotmail.ch>",
   "license": "MIT",
   "scripts": {
-    "help": "npx hardhat help",
-    "accounts": "npx hardhat accounts",
-    "balances": "npx hardhat balances",
-    "node:hh": "npx hardhat node",
-    "clean": "npx hardhat clean",
-    "test:hh": "npx hardhat test",
-    "test:forge": "forge test -vvv --root . -C contracts/src --match-path \"contracts/test/*\" --out forge-artifacts",
-    "coverage": "npx hardhat coverage",
     "compile": "npx hardhat compile",
-    "build": "forge build --root . -C contracts/src --optimize --out forge-artifacts",
-    "size": "npx hardhat size-contracts",
-    "xdeploy": "npx hardhat xdeploy",
-    "abi": "npx hardhat export-abi",
-    "deploy:hh": "npx hardhat run --network hardhat scripts/deploy.ts",
-    "deploy:localhost": "npx hardhat run --network localhost scripts/deploy.ts",
-    "deploy:dashboard": "npx hardhat run --network truffleDashboard scripts/deploy.ts",
-    "deploy:tenderly": "npx hardhat run --network tenderly scripts/deploy.ts",
-    "deploy:devnet": "npx hardhat run --network devnet scripts/deploy.ts",
-    "deploy:goerli": "npx hardhat run --network goerli scripts/deploy.ts",
-    "deploy:sepolia": "npx hardhat run --network sepolia scripts/deploy.ts",
-    "deploy:ethmain": "npx hardhat run --network ethMain scripts/deploy.ts",
-    "deploy:bsctestnet": "npx hardhat run --network bscTestnet scripts/deploy.ts",
-    "deploy:bscmain": "npx hardhat run --network bscMain scripts/deploy.ts",
-    "deploy:optimismtestnet": "npx hardhat run --network optimismTestnet scripts/deploy.ts",
-    "deploy:optimismmain": "npx hardhat run --network optimismMain scripts/deploy.ts",
-    "deploy:arbitrumtestnet": "npx hardhat run --network arbitrumTestnet scripts/deploy.ts",
-    "deploy:arbitrumsepolia": "npx hardhat run --network arbitrumSepolia scripts/deploy.ts",
-    "deploy:arbitrummain": "npx hardhat run --network arbitrumMain scripts/deploy.ts",
-    "deploy:arbitrumnova": "npx hardhat run --network arbitrumNova scripts/deploy.ts",
-    "deploy:mumbai": "npx hardhat run --network mumbai scripts/deploy.ts",
-    "deploy:polygonzkevmtestnet": "npx hardhat run --network polygonZkEVMTestnet scripts/deploy.ts",
-    "deploy:polygon": "npx hardhat run --network polygon scripts/deploy.ts",
-    "deploy:polygonzkevmmain": "npx hardhat run --network polygonZkEVMMain scripts/deploy.ts",
-    "deploy:hecotestnet": "npx hardhat run --network hecoTestnet scripts/deploy.ts",
-    "deploy:hecomain": "npx hardhat run --network hecoMain scripts/deploy.ts",
-    "deploy:fantomtestnet": "npx hardhat run --network fantomTestnet scripts/deploy.ts",
-    "deploy:fantommain": "npx hardhat run --network fantomMain scripts/deploy.ts",
-    "deploy:fuji": "npx hardhat run --network fuji scripts/deploy.ts",
-    "deploy:avalanche": "npx hardhat run --network avalanche scripts/deploy.ts",
-    "deploy:sokol": "npx hardhat run --network sokol scripts/deploy.ts",
-    "deploy:chiado": "npx hardhat run --network chiado scripts/deploy.ts",
-    "deploy:gnosis": "npx hardhat run --network gnosis scripts/deploy.ts",
-    "deploy:moonbasealpha": "npx hardhat run --network moonbaseAlpha scripts/deploy.ts",
-    "deploy:moonriver": "npx hardhat run --network moonriver scripts/deploy.ts",
-    "deploy:moonbeam": "npx hardhat run --network moonbeam scripts/deploy.ts",
-    "deploy:alfajores": "npx hardhat run --network alfajores scripts/deploy.ts",
-    "deploy:celo": "npx hardhat run --network celo scripts/deploy.ts",
-    "deploy:auroratestnet": "npx hardhat run --network auroraTestnet scripts/deploy.ts",
-    "deploy:auroramain": "npx hardhat run --network auroraMain scripts/deploy.ts",
-    "deploy:harmonytestnet": "npx hardhat run --network harmonyTestnet scripts/deploy.ts",
-    "deploy:harmonymain": "npx hardhat run --network harmonyMain scripts/deploy.ts",
-    "deploy:spark": "npx hardhat run --network spark scripts/deploy.ts",
-    "deploy:fuse": "npx hardhat run --network fuse scripts/deploy.ts",
-    "deploy:cronostestnet": "npx hardhat run --network cronosTestnet scripts/deploy.ts",
-    "deploy:cronosmain": "npx hardhat run --network cronosMain scripts/deploy.ts",
-    "deploy:evmostestnet": "npx hardhat run --network evmosTestnet scripts/deploy.ts",
-    "deploy:evmosmain": "npx hardhat run --network evmosMain scripts/deploy.ts",
-    "deploy:bobatestnet": "npx hardhat run --network bobaTestnet scripts/deploy.ts",
-    "deploy:bobamain": "npx hardhat run --network bobaMain scripts/deploy.ts",
-    "deploy:cantotestnet": "npx hardhat run --network cantoTestnet scripts/deploy.ts",
-    "deploy:cantomain": "npx hardhat run --network cantoMain scripts/deploy.ts",
-    "deploy:basetestnet": "npx hardhat run --network baseTestnet scripts/deploy.ts",
-    "deploy:basemain": "npx hardhat run --network baseMain scripts/deploy.ts",
     "deploy:zksynctestnet": "npx hardhat deploy-zksync --network zkSyncTestnet --script deploy-zksync.ts",
     "deploy:zksyncmain": "npx hardhat deploy-zksync --network zkSyncMain --script deploy-zksync.ts",
-    "deploy:mantletestnet": "npx hardhat run --network mantleTestnet scripts/deploy.ts",
-    "deploy:mantlemain": "npx hardhat run --network mantleMain scripts/deploy.ts",
-    "deploy:filecointestnet": "npx hardhat run --network filecoinTestnet scripts/deploy.ts",
-    "deploy:scrolltestnet": "npx hardhat run --network scrollTestnet scripts/deploy.ts",
-    "deploy:lineatestnet": "npx hardhat run --network lineaTestnet scripts/deploy.ts",
-    "deploy:lineamain": "npx hardhat run --network lineaMain scripts/deploy.ts",
-    "deploy:shimmerevmtestnet": "npx hardhat run --network shimmerEVMTestnet scripts/deploy.ts",
-    "deploy:zoratestnet": "npx hardhat run --network zoraTestnet scripts/deploy.ts",
-    "deploy:zoramain": "npx hardhat run --network zoraMain scripts/deploy.ts",
-    "deploy:luksotestnet": "npx hardhat run --network luksoTestnet scripts/deploy.ts",
-    "deploy:luksomain": "npx hardhat run --network luksoMain scripts/deploy.ts",
-    "deploy:mantatestnet": "npx hardhat run --network mantaTestnet scripts/deploy.ts",
-    "deploy:mantamain": "npx hardhat run --network mantaMain scripts/deploy.ts",
-    "deploy:shardeumtestnet": "npx hardhat run --network shardeumTestnet scripts/deploy.ts",
-    "deploy:artheratestnet": "npx hardhat run --network artheraTestnet scripts/deploy.ts",
     "prettier:check": "npx prettier -c **/*.{js,ts,md,sol,json,yml,yaml}",
     "prettier:fix": "npx prettier -w **/*.{js,ts,md,sol,json,yml,yaml}",
-    "solhint:check": "npx solhint 'contracts/**/*.sol'",
-    "solhint:fix": "npx solhint 'contracts/**/*.sol' --fix",
+    "solhint:check": "npx solhint 'contracts/solidity/**/*.sol'",
+    "solhint:fix": "npx solhint 'contracts/solidity/**/*.sol' --fix",
     "lint:check": "yarn prettier:check && yarn solhint:check && npx eslint **/*.{js,ts}",
     "lint:fix": "yarn prettier:fix && yarn solhint:fix && npx eslint **/*.{js,ts} --fix"
   },
@@ -114,41 +34,27 @@
     "@ethersproject/providers": "^5.7.2",
     "@matterlabs/hardhat-zksync-deploy": "^0.6.5",
     "@matterlabs/hardhat-zksync-solc": "^0.4.2",
-    "@matterlabs/hardhat-zksync-verify": "^0.1.8",
-    "@nomicfoundation/hardhat-chai-matchers": "^1.0.6",
-    "@nomicfoundation/hardhat-ledger": "^1.0.1",
-    "@nomicfoundation/hardhat-network-helpers": "^1.0.9",
-    "@nomicfoundation/hardhat-toolbox": "^2.0.2",
+    "@matterlabs/hardhat-zksync-verify": "^0.2.0",
+    "@matterlabs/hardhat-zksync-vyper": "^0.2.2",
+    "@nomicfoundation/hardhat-verify": "^1.1.1",
     "@nomiclabs/hardhat-ethers": "^2.2.3",
-    "@nomiclabs/hardhat-etherscan": "^3.1.7",
-    "@openzeppelin/contracts": "^4.9.3",
-    "@tenderly/hardhat-tenderly": "^1.7.7",
-    "@truffle/dashboard-hardhat-plugin": "^0.2.15",
+    "@nomiclabs/hardhat-vyper": "^3.0.4",
     "@typechain/ethers-v5": "^10.2.0",
     "@typechain/hardhat": "^6.1.5",
-    "@types/chai": "^4.3.6",
-    "@types/mocha": "^10.0.1",
     "@types/node": "^20.6.3",
     "@typescript-eslint/eslint-plugin": "^6.7.2",
     "@typescript-eslint/parser": "^6.7.2",
-    "chai": "^4.3.8",
     "dotenv": "^16.3.1",
     "eslint": "^8.49.0",
     "eslint-config-prettier": "^9.0.0",
     "ethers": "^5.7.2",
     "hardhat": "^2.17.3",
-    "hardhat-abi-exporter": "^2.10.1",
-    "hardhat-contract-sizer": "^2.10.0",
-    "hardhat-gas-reporter": "^1.0.9",
     "prettier": "^3.0.3",
     "prettier-plugin-solidity": "^1.1.3",
     "solhint": "^3.6.2",
-    "solidity-coverage": "^0.8.4",
     "ts-node": "^10.9.1",
     "typechain": "^8.3.1",
     "typescript": "^5.2.2",
-    "undici": "^5.25.0",
-    "xdeployer": "^1.2.7",
     "zksync-web3": "^0.14.3"
   }
 }
