--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "license": "MIT",
   "scripts": {
     "compile": "npx hardhat compile",
+    "vars:path": "npx hardhat vars path",
     "deploy:zksynclocal": "npx hardhat deploy-zksync --network zkSyncLocal --script deploy-zksync.ts",
     "deploy:zksynctestnet": "npx hardhat deploy-zksync --network zkSyncTestnet --script deploy-zksync.ts",
     "deploy:zksyncmain": "npx hardhat deploy-zksync --network zkSyncMain --script deploy-zksync.ts",
@@ -27,36 +28,32 @@
     "prettier:fix": "npx prettier -w **/*.{js,ts,md,sol,json,yml,yaml}",
     "solhint:check": "npx solhint 'contracts/solidity/**/*.sol'",
     "solhint:fix": "npx solhint 'contracts/solidity/**/*.sol' --fix",
-    "lint:check": "yarn prettier:check && yarn solhint:check && npx eslint **/*.{js,ts}",
-    "lint:fix": "yarn prettier:fix && yarn solhint:fix && npx eslint **/*.{js,ts} --fix"
+    "lint:check": "pnpm prettier:check && pnpm solhint:check && npx eslint **/*.{js,ts}",
+    "lint:fix": "pnpm prettier:fix && pnpm solhint:fix && npx eslint **/*.{js,ts} --fix"
   },
   "devDependencies": {
-    "@ethersproject/abi": "^5.7.0",
-    "@ethersproject/providers": "^5.7.2",
-    "@matterlabs/hardhat-zksync-deploy": "^0.6.5",
-    "@matterlabs/hardhat-zksync-solc": "^0.4.2",
-    "@matterlabs/hardhat-zksync-verify": "^0.2.1",
+    "@matterlabs/hardhat-zksync-deploy": "^1.0.0",
+    "@matterlabs/hardhat-zksync-solc": "^1.0.0",
+    "@matterlabs/hardhat-zksync-verify": "^1.0.0",
     "@matterlabs/hardhat-zksync-verify-vyper": "^0.0.1-alpha.2",
-    "@matterlabs/hardhat-zksync-vyper": "^0.2.2",
+    "@matterlabs/hardhat-zksync-vyper": "^1.0.0",
+    "@nomicfoundation/hardhat-ethers": "^3.0.4",
     "@nomicfoundation/hardhat-verify": "^1.1.1",
-    "@nomiclabs/hardhat-ethers": "^2.2.3",
-    "@nomiclabs/hardhat-vyper": "^3.0.4",
-    "@typechain/ethers-v5": "^10.2.0",
-    "@typechain/hardhat": "^6.1.5",
-    "@types/node": "^20.8.10",
+    "@nomiclabs/hardhat-vyper": "^3.0.5",
+    "@typechain/ethers-v6": "^0.5.1",
+    "@typechain/hardhat": "^9.1.0",
     "@typescript-eslint/eslint-plugin": "^6.9.1",
     "@typescript-eslint/parser": "^6.9.1",
-    "dotenv": "^16.3.1",
-    "eslint": "^8.52.0",
+    "eslint": "^8.53.0",
     "eslint-config-prettier": "^9.0.0",
-    "ethers": "^5.7.2",
-    "hardhat": "^2.18.3",
+    "ethers": "^6.8.1",
+    "hardhat": "^2.19.0",
     "prettier": "^3.0.3",
     "prettier-plugin-solidity": "^1.1.3",
     "solhint": "^4.0.0",
     "ts-node": "^10.9.1",
     "typechain": "^8.3.2",
     "typescript": "^5.2.2",
-    "zksync-web3": "^0.14.3"
+    "zksync2-js": "^0.2.2"
   }
 }
