--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,7 @@
   "include": [
     "./scripts/**/*.ts",
     "./test/**/*.ts",
+    "./deploy/**/*.ts",
     "./typechain-types/**/*.ts"
   ],
   "files": ["./hardhat.config.ts"]
