--- a/package.json
+++ b/package.json
@@ -35,15 +35,15 @@
     "@matterlabs/hardhat-zksync-deploy": "^1.0.0",
     "@matterlabs/hardhat-zksync-solc": "^1.0.0",
     "@matterlabs/hardhat-zksync-verify": "^1.0.0",
-    "@matterlabs/hardhat-zksync-verify-vyper": "^0.0.1-alpha.3",
+    "@matterlabs/hardhat-zksync-verify-vyper": "0.0.1-alpha.3",
     "@matterlabs/hardhat-zksync-vyper": "^1.0.0",
     "@nomicfoundation/hardhat-ethers": "^3.0.4",
     "@nomicfoundation/hardhat-verify": "^1.1.1",
     "@nomiclabs/hardhat-vyper": "^3.0.5",
     "@typechain/ethers-v6": "^0.5.1",
     "@typechain/hardhat": "^9.1.0",
-    "@typescript-eslint/eslint-plugin": "^6.9.1",
-    "@typescript-eslint/parser": "^6.9.1",
+    "@typescript-eslint/eslint-plugin": "^6.10.0",
+    "@typescript-eslint/parser": "^6.10.0",
     "eslint": "^8.53.0",
     "eslint-config-prettier": "^9.0.0",
     "ethers": "^6.8.1",
