--- a/package.json
+++ b/package.json
@@ -33,12 +33,13 @@
   },
   "devDependencies": {
     "@matterlabs/hardhat-zksync-deploy": "^1.0.0",
-    "@matterlabs/hardhat-zksync-solc": "^1.0.0",
-    "@matterlabs/hardhat-zksync-verify": "^1.0.0",
-    "@matterlabs/hardhat-zksync-verify-vyper": "0.0.1-alpha.3",
-    "@matterlabs/hardhat-zksync-vyper": "^1.0.0",
+    "@matterlabs/hardhat-zksync-solc": "^1.0.2",
+    "@matterlabs/hardhat-zksync-verify": "^1.1.0",
+    "@matterlabs/hardhat-zksync-verify-vyper": "0.0.1-alpha.2",
+    "@matterlabs/hardhat-zksync-vyper": "^1.0.2",
+    "@matterlabs/hardhat-zksync-zksync2js": "0.0.1-beta.2",
     "@nomicfoundation/hardhat-ethers": "^3.0.5",
-    "@nomicfoundation/hardhat-verify": "^1.1.1",
+    "@nomicfoundation/hardhat-verify": "^2.0.1",
     "@nomiclabs/hardhat-vyper": "^3.0.5",
     "@typechain/ethers-v6": "^0.5.1",
     "@typechain/hardhat": "^9.1.0",
