--- a/package.json
+++ b/package.json
@@ -32,12 +32,12 @@
     "lint:fix": "pnpm prettier:fix && pnpm solhint:fix && npx eslint **/*.{js,ts} --fix"
   },
   "devDependencies": {
-    "@matterlabs/hardhat-zksync-deploy": "^1.0.0",
+    "@matterlabs/hardhat-zksync-deploy": "^1.1.0",
+    "@matterlabs/hardhat-zksync-ethers": "0.0.1-beta.1",
     "@matterlabs/hardhat-zksync-solc": "^1.0.3",
-    "@matterlabs/hardhat-zksync-verify": "^1.1.1",
-    "@matterlabs/hardhat-zksync-verify-vyper": "0.0.1-alpha.4",
+    "@matterlabs/hardhat-zksync-verify": "^1.2.0",
+    "@matterlabs/hardhat-zksync-verify-vyper": "0.0.1-alpha.5",
     "@matterlabs/hardhat-zksync-vyper": "^1.0.3",
-    "@matterlabs/hardhat-zksync-zksync2js": "0.0.1-beta.2",
     "@nomicfoundation/hardhat-ethers": "^3.0.5",
     "@nomicfoundation/hardhat-verify": "^2.0.2",
     "@nomiclabs/hardhat-vyper": "^3.0.5",
@@ -49,12 +49,12 @@
     "eslint-config-prettier": "^9.1.0",
     "ethers": "^6.9.0",
     "hardhat": "^2.19.2",
-    "prettier": "^3.1.0",
+    "prettier": "^3.1.1",
     "prettier-plugin-solidity": "^1.2.0",
     "solhint": "^4.0.0",
     "ts-node": "^10.9.2",
     "typechain": "^8.3.2",
     "typescript": "^5.3.3",
-    "zksync2-js": "^0.2.2"
+    "zksync-ethers": "^6.0.0"
   }
 }
