--- a/package.json
+++ b/package.json
@@ -24,12 +24,12 @@
     "deploy:zksynclocal": "npx hardhat deploy-zksync --network zkSyncLocal --script deploy-zksync.ts",
     "deploy:zksynctestnet": "npx hardhat deploy-zksync --network zkSyncTestnet --script deploy-zksync.ts",
     "deploy:zksyncmain": "npx hardhat deploy-zksync --network zkSyncMain --script deploy-zksync.ts",
-    "prettier:check": "npx prettier -c **/*.{js,ts,md,sol,json,yml,yaml}",
-    "prettier:fix": "npx prettier -w **/*.{js,ts,md,sol,json,yml,yaml}",
-    "solhint:check": "npx solhint 'contracts/solidity/**/*.sol'",
-    "solhint:fix": "npx solhint 'contracts/solidity/**/*.sol' --fix",
-    "lint:check": "pnpm prettier:check && pnpm solhint:check && npx eslint **/*.{js,ts}",
-    "lint:fix": "pnpm prettier:fix && pnpm solhint:fix && npx eslint **/*.{js,ts} --fix"
+    "prettier:check": "npx prettier -c \"**/*.{js,ts,md,sol,json,yml,yaml}\"",
+    "prettier:fix": "npx prettier -w \"**/*.{js,ts,md,sol,json,yml,yaml}\"",
+    "solhint:check": "npx solhint \"contracts/solidity/**/*.sol\"",
+    "solhint:fix": "npx solhint \"contracts/solidity/**/*.sol\" --fix",
+    "lint:check": "pnpm prettier:check && pnpm solhint:check && npx eslint \"**/*.{js,ts}\"",
+    "lint:fix": "pnpm prettier:fix && pnpm solhint:fix && npx eslint \"**/*.{js,ts}\" --fix"
   },
   "devDependencies": {
     "@matterlabs/hardhat-zksync-deploy": "^1.1.2",
