--- a/package.json
+++ b/package.json
@@ -33,11 +33,11 @@
   },
   "devDependencies": {
     "@matterlabs/hardhat-zksync-deploy": "^1.1.2",
-    "@matterlabs/hardhat-zksync-ethers": "0.0.1-beta.2",
-    "@matterlabs/hardhat-zksync-solc": "^1.1.0",
+    "@matterlabs/hardhat-zksync-ethers": "1.0.0",
+    "@matterlabs/hardhat-zksync-solc": "^1.1.2",
     "@matterlabs/hardhat-zksync-verify": "^1.3.0",
     "@matterlabs/hardhat-zksync-verify-vyper": "0.0.1-alpha.6",
-    "@matterlabs/hardhat-zksync-vyper": "^1.0.6",
+    "@matterlabs/hardhat-zksync-vyper": "^1.0.7",
     "@nomicfoundation/hardhat-ethers": "^3.0.5",
     "@nomicfoundation/hardhat-verify": "^2.0.3",
     "@nomiclabs/hardhat-vyper": "^3.0.5",
