♻️ Use `eslint` Flat Configuration File `eslint.config.js`
Signed-off-by: Pascal Marco Caversaccio <pascal.caversaccio@hotmail.ch>

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,9 +11,11 @@
     "resolveJsonModule": true
   },
   "include": [
+    "./scripts/**/*.js",
     "./scripts/**/*.ts",
+    "./deploy/**/*.js",
     "./deploy/**/*.ts",
     "./typechain-types/**/*.ts"
   ],
-  "files": ["./hardhat.config.ts"]
+  "files": ["./hardhat.config.ts", "eslint.config.js"]
 }
