--- a/package.json
+++ b/package.json
@@ -28,10 +28,11 @@
     "prettier:fix": "npx prettier -w \"**/*.{js,ts,md,sol,json,yml,yaml}\"",
     "solhint:check": "npx solhint \"contracts/solidity/**/*.sol\"",
     "solhint:fix": "npx solhint \"contracts/solidity/**/*.sol\" --fix",
-    "lint:check": "pnpm prettier:check && pnpm solhint:check && npx eslint \"**/*.{js,ts}\"",
-    "lint:fix": "pnpm prettier:fix && pnpm solhint:fix && npx eslint \"**/*.{js,ts}\" --fix"
+    "lint:check": "pnpm prettier:check && pnpm solhint:check && npx eslint .",
+    "lint:fix": "pnpm prettier:fix && pnpm solhint:fix && npx eslint . --fix"
   },
   "devDependencies": {
+    "@eslint/js": "^8.56.0",
     "@matterlabs/hardhat-zksync-deploy": "^1.1.2",
     "@matterlabs/hardhat-zksync-ethers": "1.0.0",
     "@matterlabs/hardhat-zksync-solc": "^1.1.2",
@@ -43,18 +44,17 @@
     "@nomiclabs/hardhat-vyper": "^3.0.5",
     "@typechain/ethers-v6": "^0.5.1",
     "@typechain/hardhat": "^9.1.0",
-    "@typescript-eslint/eslint-plugin": "^6.21.0",
-    "@typescript-eslint/parser": "^6.21.0",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
-    "ethers": "^6.11.0",
-    "hardhat": "^2.19.5",
+    "ethers": "^6.11.1",
+    "hardhat": "^2.20.0",
     "prettier": "^3.2.5",
     "prettier-plugin-solidity": "^1.3.1",
     "solhint": "^4.1.1",
     "ts-node": "^10.9.2",
     "typechain": "^8.3.2",
     "typescript": "^5.3.3",
+    "typescript-eslint": "^7.0.1",
     "zksync-ethers": "^6.3.0"
   }
 }
