--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "author": "Pascal Marco Caversaccio <pascal.caversaccio@hotmail.ch>",
   "license": "MIT",
+  "packageManager": "pnpm@10.2.1",
   "scripts": {
     "compile": "npx hardhat compile",
     "vars:path": "npx hardhat vars path",
@@ -56,5 +57,14 @@
     "typescript": "^5.7.3",
     "typescript-eslint": "^8.23.0",
     "zksync-ethers": "^6.16.0"
+  },
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "cpu-features",
+      "keccak",
+      "protobufjs",
+      "secp256k1",
+      "ssh2"
+    ]
   }
 }
