--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
   "devDependencies": {
     "@eslint/js": "^9.23.0",
     "@matterlabs/hardhat-zksync-deploy": "^1.7.0",
-    "@matterlabs/hardhat-zksync-ethers": "1.3.0",
+    "@matterlabs/hardhat-zksync-ethers": "^1.3.0",
     "@matterlabs/hardhat-zksync-solc": "^1.3.0",
     "@matterlabs/hardhat-zksync-verify": "^1.8.0",
     "@matterlabs/hardhat-zksync-verify-vyper": "0.1.0-alpha.6",
