--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "author": "Pascal Marco Caversaccio <pascal.caversaccio@hotmail.ch>",
   "license": "MIT",
-  "packageManager": "pnpm@10.25.0",
+  "packageManager": "pnpm@10.26.0",
   "scripts": {
     "compile": "npx hardhat compile",
     "vars:path": "npx hardhat vars path",
@@ -40,7 +40,7 @@
     "@matterlabs/hardhat-zksync-verify": "^1.9.1",
     "@matterlabs/hardhat-zksync-verify-vyper": "0.2.0-alpha.6",
     "@matterlabs/hardhat-zksync-vyper": "^1.4.0",
-    "@nomicfoundation/hardhat-ethers": "^3.1.2",
+    "@nomicfoundation/hardhat-ethers": "^3.1.3",
     "@nomicfoundation/hardhat-verify": "^2.1.3",
     "@nomiclabs/hardhat-vyper": "^3.1.0",
     "@typechain/ethers-v6": "^0.5.1",
@@ -48,14 +48,15 @@
     "eslint": "^9.39.2",
     "eslint-config-prettier": "^10.1.8",
     "ethers": "^6.16.0",
-    "hardhat": "^2.27.2",
+    "globals": "^16.5.0",
+    "hardhat": "^2.28.0",
     "prettier": "^3.7.4",
     "prettier-plugin-solidity": "^2.2.0",
     "solhint": "^6.0.1",
     "ts-node": "^10.9.2",
     "typechain": "^8.3.2",
     "typescript": "^5.9.3",
-    "typescript-eslint": "^8.49.0",
+    "typescript-eslint": "^8.50.0",
     "zksync-ethers": "^6.21.0"
   },
   "pnpm": {
