--- a/package.json
+++ b/package.json
@@ -16,21 +16,21 @@
   "bugs": {
     "url": "https://github.com/pcaversaccio/zksync-vyper-sandbox/issues"
   },
-  "author": "Pascal Marco Caversaccio <pascal.caversaccio@hotmail.ch>",
+  "author": "pcaversaccio",
   "license": "MIT",
-  "packageManager": "pnpm@10.28.2",
+  "packageManager": "pnpm@10.29.1",
   "scripts": {
-    "compile": "npx hardhat compile",
-    "vars:path": "npx hardhat vars path",
-    "deploy:zksynclocal": "npx hardhat deploy-zksync --network zkSyncLocal --script deploy-zksync.ts",
-    "deploy:zksynctestnet": "npx hardhat deploy-zksync --network zkSyncTestnet --script deploy-zksync.ts",
-    "deploy:zksyncmain": "npx hardhat deploy-zksync --network zkSyncMain --script deploy-zksync.ts",
-    "prettier:check": "npx prettier -c \"**/*.{js,ts,md,sol,json,yml,yaml}\"",
-    "prettier:fix": "npx prettier -w \"**/*.{js,ts,md,sol,json,yml,yaml}\"",
-    "solhint:check": "npx solhint \"contracts/solidity/**/*.sol\"",
-    "solhint:fix": "npx solhint \"contracts/solidity/**/*.sol\" --fix",
-    "lint:check": "pnpm prettier:check && pnpm solhint:check && npx eslint .",
-    "lint:fix": "pnpm prettier:fix && pnpm solhint:fix && npx eslint . --fix"
+    "compile": "hardhat compile",
+    "vars:path": "hardhat vars path",
+    "deploy:zksynclocal": "hardhat deploy-zksync --network zkSyncLocal --script deploy-zksync.ts",
+    "deploy:zksynctestnet": "hardhat deploy-zksync --network zkSyncTestnet --script deploy-zksync.ts",
+    "deploy:zksyncmain": "hardhat deploy-zksync --network zkSyncMain --script deploy-zksync.ts",
+    "prettier:check": "prettier -c \"**/*.{js,ts,md,sol,json,yml,yaml}\"",
+    "prettier:fix": "prettier -w \"**/*.{js,ts,md,sol,json,yml,yaml}\"",
+    "solhint:check": "solhint \"contracts/solidity/**/*.sol\"",
+    "solhint:fix": "solhint \"contracts/solidity/**/*.sol\" --fix",
+    "lint:check": "pnpm prettier:check && pnpm solhint:check && eslint .",
+    "lint:fix": "pnpm prettier:fix && pnpm solhint:fix && eslint . --fix"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.2",
